# lustre-connector-for-hadoop

./: Installation of HAL on Apache Hadoop.md  LICENSE  README.md  pom.xml
src/: CMakeLists.txt
src/main/java/: input
src/main/java/org/apache/hadoop/fs/: LustreFileSystem.java
src/main/java/org/apache/hadoop/fs/local/: RawLocalProxyFs.java
src/main/java/org/apache/hadoop/fs/util/: Shell.java
src/main/java/org/apache/hadoop/lustre/io/: BufferedFileInputStream.java  LustreFileStatus.java  LustreFsDelegate.java  LustreFsJavaImpl.java  LustreFsNativeImpl.java
src/main/java/org/apache/hadoop/mapred/: LustreFsOutputCollector.java  SharedFsPlugins.java
src/main/java/org/apache/hadoop/mapreduce/task/reduce/: LustreFsMergeThread.java  LustreFsShuffle.java
src/main/native/src/: asyncio.c  asyncio.h  errno_enum.c  exception.c  exception.h  file_descriptor.c  file_descriptor.h  lustre_helper.c  lustre_helper.h  lustre_iostreams.c  lustre_native_io.c  macros.h
